Add some null tests for Range Intersect method